# Maconv

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md  libHFS.md
docs/formats/: AppleDouble.md  AppleSingle.md  BinHex.md  MacBinary.md
docs/licenses/: TheUnarchiver.txt
docs/stuffit/: Stuffit.md  Stuffit_v1.md  Stuffit_v5.md
src/: commands.cc  commands.h  maconv.1  main.cc
src/conv/: appledouble.cc  applesingle.cc  binhex.cc  converters.h  macbinary.cc  rsrc.cc
src/disk/: disk.h  extract.cc  pack.cc
src/formats/: file_signature.cc  file_signature.h  formats.cc  formats.h  pack.cc  unpack.cc
src/fs/: file.cc  file.h  file_reader.cc  file_reader.h  file_writer.cc  file_writer.h
src/stuffit/: methods.cc  methods.h  stuffit.cc  stuffit.h  stuffit_v1.cc  stuffit_v5.cc
src/stuffit/methods/: algorithm13.cc  algorithm13.h  arsenic.cc  arsenic.h  compress.cc  compress.h  rle90.cc  rle90.h
src/stuffit/utils/: bwt.cc  bwt.h  crc.cc  huffman.cc  huffman.h
src/utils/: bit_reader.cc  bit_reader.h  buffer_stream.cc  buffer_stream.h
vendors/: make_unique.hpp  path.hpp
vendors/libhfs/: CMakeLists.txt  config.h.in  data.c  data.h  hfs.h  libhfs.txt  os-unix.c  volume.c
